<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="@dimen/alpha"
            android:scaleType="center"
            android:adjustViewBounds="false"
            tools:ignore="ContentDescription"
            android:src="@drawable/background" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textView"
                android:hint="@string/user_name"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textView"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorBlack"
                android:text="@string/header_question1"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/question"
                android:fontFamily="sans-serif"
                android:text="@string/question1"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/check_q1_henry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_left"
                        android:text="@string/answer_q1_henry" />

                    <CheckBox
                        android:id="@+id/check_q1_james"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_left"
                        android:text="@string/answer_q1_james" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/check_q1_lily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_right"
                        android:text="@string/answer_q1_lily" />

                    <CheckBox
                        android:id="@+id/check_q1_elizabeth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_right"
                        android:text="@string/answer_q1_elizabeth" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                style="@style/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textView"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorBlack"
                android:text="@string/header_question2"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/question"
                android:fontFamily="sans-serif"
                android:text="@string/question2"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edit_q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textEdit"
                android:hint="@string/answer_q2"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                style="@style/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textView"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorBlack"
                android:text="@string/header_question3"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/question"
                android:fontFamily="sans-serif"
                android:text="@string/question3"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/check_q3_incendio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_left"
                        android:text="@string/answer_q3_incendio" />

                    <CheckBox
                        android:id="@+id/check_q3_avadakedavra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_left"
                        android:text="@string/answer_q3_avadakedavra" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/check_q3_imperio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_right"
                        android:text="@string/answer_q3_imperio" />

                    <CheckBox
                        android:id="@+id/check_q3_crucio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/checkbox_right"
                        android:text="@string/answer_q3_crucio" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                style="@style/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textView"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorBlack"
                android:text="@string/header_question4"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/question"
                android:fontFamily="sans-serif"
                android:text="@string/question4"
                android:textColor="@color/colorBlack" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio_q4_mcgonagall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_q4_mcgonagall"
                    style="@style/radio_button_left" />
                <RadioButton
                    android:id="@+id/radio_q4_snape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_q4_snape"
                    style="@style/radio_button_left" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                style="@style/line" />

        </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/linear"
            android:onClick="submit"
            android:text="@string/submit" />

    </RelativeLayout>

</ScrollView>